# AssetPacker

./: .gitignore  CMakeLists.txt
include/: AssetEntry.h  AssetPacker.h
src/: AssetPacker.cpp  main.cpp
